fixed alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -31,3 +31,6 @@
 canvas {
     display: block;
 }
+canvas {
+    display: block;
+}
